<resources>
    <string name="app_name">MyPPoker2</string>
    <string name="profile">Profile</string>
    <string name="dialog_creation">Creation</string>
    <string name="dialog_confirm">Confirm</string>
    <string name="dialog_cancel">Cancel</string>

    <string name="card_value">Valeur :</string>
    <string name="card_description">Description :</string>
    <string name="card_color">Couleur :</string>

    <string name="profile_login">Pseudo :</string>
    <string name="storage_none">Storage None</string>
    <string name="storage_data_base">Data base</string>
    <string name="storage_file_json">JSON</string>

    <string name="success">Les cartes ont bien été récupérées</string>
    <string name="error">Les cartes n ont pas bien été récupérées</string>
    <string name="addcard">addCard</string>
</resources>