<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.ProfileActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/profile_view"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.25"
            android:src="@drawable/ic_user"
            />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.75"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/profile_login" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/profile_picture_button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTint="@color/colorAccent"
                    android:contentDescription="Prendre une photo"
                    android:src="@drawable/ic_photo"
                    app:tint="@color/white" />

                <ImageButton
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTint="@color/colorAccent"
                    android:contentDescription="Chercher dans la gallerie"
                    android:src="@drawable/ic_gallery"
                    app:tint="@color/white" />

                <ImageButton
                    android:id="@+id/profile_message_button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTint="@color/colorAccent"
                    android:contentDescription="Contact"
                    android:src="@drawable/ic_mail"
                    app:tint="@color/white" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_margin="16dp"
        android:background="?android:listDivider" />

    <RadioGroup
        android:id="@+id/profile_storage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
        <RadioButton
            android:id="@+id/storage_none"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/storage_none" />
        <RadioButton
            android:id="@+id/storage_db"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/storage_data_base" />
        <RadioButton
            android:id="@+id/storage_json"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/storage_file_json" />
    </RadioGroup>


</LinearLayout>